--- a/sass/Base/_reset.scss
+++ b/sass/Base/_reset.scss
@@ -1,7 +1,7 @@
 * {
    margin: 0;
    padding: 0;
-   font-family: 'Montserrat', sans-serif;
+   font-family: "Montserrat", sans-serif;
    box-sizing: border-box;
    font-size: 15px;
 }
@@ -12,10 +12,10 @@ body {
 }
 
 p {
-   font-family: 'Roboto', sans-serif;
+   font-family: "Roboto", sans-serif;
 }
 
-@include responsive('extra-large-down') {
+@include responsive("extra-large-down") {
    body {
       font-size: 14px;
    }
