--- a/sass/Layouts/_carousel.scss
+++ b/sass/Layouts/_carousel.scss
@@ -1,5 +1,10 @@
 #carousel {
-   @include style-bg-img(url("./../../imgs/yellow_top_wave_01.png"), no-repeat, contain, top);
+   @include style-bg-img(
+      url("./../../imgs/yellow_top_wave_01.png"),
+      no-repeat,
+      contain,
+      top
+   );
    padding: $pd-8 0;
    position: relative;
 
@@ -10,7 +15,12 @@
       left: 0;
       width: 100%;
       height: 50%;
-      @include style-bg-img(url("./../../imgs/Violet_top_left_wave.png"), no-repeat, contain, bottom);
+      @include style-bg-img(
+         url("./../../imgs/Violet_top_left_wave.png"),
+         no-repeat,
+         contain,
+         bottom
+      );
    }
 
    .carousel__title {
@@ -20,12 +30,11 @@
       }
       h1 {
          @include style-text($fs-7, $fw-4, $dark-color, $lh-8);
-
       }
    }
 }
 
-@include responsive('extra-large-down') {
+@include responsive("extra-large-down") {
    #carousel {
       margin-top: 88px;
    }
