--- a/sass/Layouts/_footer.scss
+++ b/sass/Layouts/_footer.scss
@@ -43,23 +43,23 @@
 
    .footer__link-item {
       list-style: none;
-      
+
       li {
          padding: $pd-6 0;
          line-height: $lh-2;
-         
+
          &:first-child {
             padding-top: 0;
-            
+
             a {
                padding-top: 0;
             }
          }
-         
+
          a {
             padding: $pd-6 0;
             text-decoration: none;
-            font-family: 'Roboto', sans-serif;
+            font-family: "Roboto", sans-serif;
             border-bottom: $bd-1 solid $dark-color-2;
             @include style-text($fs-3, $fw-1, $white-color-1, $lh-2);
          }
@@ -74,7 +74,7 @@
          text-align: center;
          border-radius: $br-1;
          background-color: transparent;
-         font-family: 'Roboto', sans-serif;
+         font-family: "Roboto", sans-serif;
          border: $bd-1 solid $white-color-3;
          @include style-text($fs-9, $fw-1, $white-color-1, $lh-2);
 
