--- a/sass/Layouts/_member.scss
+++ b/sass/Layouts/_member.scss
@@ -1,5 +1,10 @@
 #member {
    background-color: $dark-color-3;
    padding-top: 20px;
-   @include style-bg-img(url("./../../imgs/Wave_White_bottom_right_shape_01.png"), no-repeat, contain, bottom);
+   @include style-bg-img(
+      url("./../../imgs/Wave_White_bottom_right_shape_01.png"),
+      no-repeat,
+      contain,
+      bottom
+   );
 }
